# TrueTechHack

./: README.md
frontend/: index.html  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  Router.jsx  index.scss  main.jsx
frontend/src/components/: Button.jsx  FilmStream.jsx  Layout.jsx  LinkToFilm.jsx  MjpegStream.jsx  VideoPlayer.jsx
frontend/src/routes/: routes.jsx
frontend/src/screens/: Film.jsx  FilmScreen.jsx  LoginScreen.jsx  MainScreen.jsx  NotFound.jsx  RegistrationScreen.jsx
frontend/src/services/: services.jsx
frontend/src/styles/: FilmScreen.module.scss  Layout.module.scss  LinkToFilm.module.scss  LoginScreen.module.scss  MainScreen.module.scss  VideoPlayer.module.scss
server/: CMakeLists.txt  Dockerfile  api.cpp  handler.cpp  index.html  main.cpp  tools.h  werghkugbuwkejbkgebub
